<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <include layout="@layout/topbar_item" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/launcer_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />


            <LinearLayout
                android:id="@+id/contentLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/home_item_background"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingStart="21sp"
                android:paddingTop="30dp"
                android:paddingEnd="21sp"
                android:paddingBottom="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgLogo">

                <LinearLayout
                    android:id="@+id/networkLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextLightBlue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/network_data"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:id="@+id/network_data"
                        style="@style/TextAccount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/heebo_medium"
                        android:textSize="15sp"
                        tools:text="@android:string/unknownName" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextLightBlue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/type_data"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:id="@+id/type_data"
                        style="@style/TextAccount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/heebo_medium"
                        android:textSize="15sp"
                        tools:text="@android:string/unknownName" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bank_dataLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextLightBlue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/bank_data"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:id="@+id/bank_data"
                        style="@style/TextAccount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/heebo_medium"
                        android:textSize="15sp"
                        tools:text="@android:string/unknownName" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/branddataLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextLightBlue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/brand_data"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:id="@+id/brand_data"
                        style="@style/TextAccount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/heebo_medium"
                        android:textSize="15sp"
                        tools:text="@android:string/unknownName" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextLightBlue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/prepaid_data"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:id="@+id/prepaid_data"
                        style="@style/TextAccount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/heebo_medium"
                        android:textSize="15sp"
                        tools:text="@android:string/unknownName" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/countryTotalLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextLightBlue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/country"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:id="@+id/country_data"
                        style="@style/TextAccount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/heebo_medium"
                        android:textSize="15sp"
                        tools:text="@android:string/unknownName" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/phoneLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextLightBlue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/phone_number"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:id="@+id/phone_data"
                        style="@style/TextAccount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/heebo_medium"
                        android:textSize="15sp"
                        tools:text="@android:string/unknownName" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        style="@style/TextLightBlue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/city"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:id="@+id/city_data"
                        style="@style/TextAccount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/heebo_medium"
                        android:textSize="15sp"
                       />
                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>